# hologen

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
dataset/: sample_00000_circle_checker.npz  sample_00001_circle_checker.npz
docs/: ADVANCED_DATASET_GENERATION.md  API_REFERENCE.md  CLI_REFERENCE.md  COMPLEX_FIELDS.md  COMPLEX_FIELDS_QUICKSTART.md  EXAMPLES.md  HOLOGRAPHY_METHODS.md  IO_FORMATS.md  NOISE_SIMULATION.md  PIPELINE.md  QUICKSTART.md  README.md  SHAPES.md  UTILITIES.md
examples/: sample_00002_rectangle.npz  sample_00003_circle.npz  sample_00004_circle.npz
scripts/: analyze_phase_dataset.py  flatten_dataset.sh  generate_advanced_dataset.py  generate_complex_dataset.py  generate_dataset.py  generate_example_outputs.py  generate_holography_examples.py  generate_shape_examples.py  generate_swin_dataset.py  generate_utility_diagrams.py  generate_visual_examples.py  inspect_dataset.py  test_phase_generation.py
src/hologen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py  test_backward_compat.py  test_converters.py  test_converters_noise.py  test_edge_cases.py  test_fields.py  test_init.py  test_inline.py  test_inline_vs_offaxis.py  test_integration_complex.py  test_io.py  test_io_complex.py  test_io_phase_colormap.py  test_math_utils.py  test_noise_models.py  test_off_axis.py  test_phase_config.py  test_phase_generator.py  test_propagation.py  test_propagation_complex.py  test_shapes.py  test_shapes_complex.py  test_types.py
(+19 files in other folders)
