[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hologen"
version = "0.1.0"
description = "Holography dataset generation toolkit"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Gyokhan Kochmarla", email = "hello@gyokhan.com" },
]
license = { text = "MIT" }
dependencies = [
    "numpy>=2.3,<2.4",
    "pillow>=12.0,<13.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.2",
]

[tool.black]
target-version = ["py313"]
line-length = 88

[tool.ruff]
target-version = "py313"
line-length = 88
select = ["E", "F", "I", "UP", "N"]
ignore = ["E203", "E266", "E501", "B008"]

[tool.ruff.isort]
known-first-party = ["hologen"]